# NoVuneb

./: LICENSE  README.md  novuneb-report.json  pyproject.toml  test_vulnerable.py
src/novuneb/: __init__.py  cli.py
src/novuneb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/novuneb/core/: __init__.py  config.py  engine.py  models.py  scanner.py
src/novuneb/fixers/: __init__.py  base.py  javascript_fixer.py  python_fixer.py
src/novuneb/github_integration/: __init__.py  client.py  pr_scanner.py
src/novuneb/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  sarif_reporter.py
src/novuneb/scanners/: __init__.py  bandit_scanner.py  base.py  safety_scanner.py  semgrep_scanner.py
src/novuneb/utils/: __init__.py  crypto_utils.py  file_utils.py  logger.py
